--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
+    "@ffmpeg/types": "^0.12.2",
     "esbuild": "0.21.5",
     "typescript": "^5.4.5"
   }
